--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Skillet Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Skillet Lasagna</a></li>
+        <li><a href="./recipes/beef_stew.html">Beef Stew</a></li>
+        <li><a href="">Sample Text</a></li>
+    </ul>    
+
 </body>
 </html>
