Added 3rd recipe

--- a/recipes/beef_stew.html
+++ b/recipes/beef_stew.html
@@ -13,7 +13,8 @@
 <h3>Instructions</h3>
 <ol>
     <li>Pour your beef stock in your pot and bring to a boil</li>
-    <li>Add in beef and let, reduce heat, and let simmer for 5 minutes</li>
+    <li>Add in beef, reduce heat, and let simmer for 10 minutes</li>
     <li>Add in carrots, potatoes, and onion</li>
     <li>Simmer for 1 hours</li>
 </ol>
+<a href="../index.html">Back to Home</a>
