--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,3 +19,4 @@
         <li>Add pasta sauce</li>
         <li>Add salt or pepper to taste</li>
     </ol>
+    <a href="../index.html">Back to Home</a>
