--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/gramsey.jpg" alt="G. Ram with a sosig" style="width: 800px;height: 450px;">
     <ul>
         <li><a href="./recipes/lasagna.html">Skillet Lasagna</a></li>
         <li><a href="./recipes/beef_stew.html">Beef Stew</a></li>
-        <li><a href="">Sample Text</a></li>
-    </ul>    
+        <li><a href="./recipes/grilled_chicken.html">Grilled Chicken</a></li>
+    </ul>   
+ 
 
 </body>
 </html>
